--- a/.golangci.yml
+++ b/.golangci.yml
@@ -175,7 +175,7 @@ linters:
           arguments:
             - max-lit-count: "5"
               allow-strs: '"","\n"'
-              allow-ints: "0,1,2,3,256,1024"
+              allow-ints: "0,1,2,3,256,1024,0o600,0o700,0o755"
               allow-floats: "0.0,0.,1.0,1.,2.0,2."
         - name: cognitive-complexity
           arguments: [50]
@@ -189,6 +189,8 @@ linters:
           disabled: true
         - name: max-public-structs
           arguments: [10]
+        - name: flag-parameter # fixes are difficult
+          disabled: true
 
     rowserrcheck:
       # database/sql is always checked.
