--- a/.golangci.yml
+++ b/.golangci.yml
@@ -175,12 +175,12 @@ linters:
           arguments:
             - max-lit-count: "5"
               allow-strs: '"","\n"'
-              allow-ints: "0,1,2,3,256,1024,0o600,0o700,0o755"
+              allow-ints: "0,1,2,3,24,30,365,1024,0o600,0o700,0o750,0o755"
               allow-floats: "0.0,0.,1.0,1.,2.0,2."
         - name: cognitive-complexity
-          arguments: [50]
-        - name: cyclomatic
           arguments: [55]
+        - name: cyclomatic
+          arguments: [60]
         - name: function-length
           arguments: [150, 225]
         - name: line-length-limit
