--- a/.golangci.yml
+++ b/.golangci.yml
@@ -40,6 +40,7 @@ linters:
     - gochecknoglobals # checks that no global variables exist
     - cyclop # replaced by revive
     - gocyclo # replaced by revive
+    - forbidigo # needs configuration to be useful
     - funlen # replaced by revive
     - godox # TODO's are OK
     - ireturn # It's OK
@@ -175,7 +176,7 @@ linters:
           arguments:
             - max-lit-count: "5"
               allow-strs: '"","\n"'
-              allow-ints: "0,1,2,3,24,30,365,1024,0o600,0o700,0o750,0o755"
+              allow-ints: "0,1,2,3,24,30,60,100,365,0o600,0o700,0o750,0o755"
               allow-floats: "0.0,0.,1.0,1.,2.0,2."
         - name: cognitive-complexity
           arguments: [55]
