--- a/.golangci.yml
+++ b/.golangci.yml
@@ -171,13 +171,7 @@ linters:
       rules:
         - name: add-constant
           severity: warning
-          disabled: false
-          exclude: [""]
-          arguments:
-            - max-lit-count: "5"
-              allow-strs: '"","\n"'
-              allow-ints: "0,1,2,3,24,30,60,100,365,0o600,0o700,0o750,0o755"
-              allow-floats: "0.0,0.,1.0,1.,2.0,2."
+          disabled: true
         - name: cognitive-complexity
           arguments: [55]
         - name: cyclomatic
